syntax = "proto3";

package envoy.config.filter.thrift.rate_limit.v2alpha1;
option go_package = "v2alpha1";

import "envoy/api/v2/ratelimit/ratelimit.proto";
import "google/protobuf/duration.proto";

import "validate/validate.proto";
import "gogoproto/gogo.proto";

// [#protodoc-title: Rate limit]
// Rate limit :ref:`configuration overview <config_thrift_filters_rate_limit>`.

// [#comment:next free field: 5]
message RateLimit {
  // The rate limit domain to use in the rate limit service request.
  string domain = 1 [(validate.rules).string.min_bytes = 1];

  // Specifies the rate limit configurations to be applied with the same stage number. If not set,
  // the default stage number is 0.
  //
  // .. note::
  //
  //  The filter supports a range of 0 - 10 inclusively for stage numbers.
  uint32 stage = 2 [(validate.rules).uint32.lte = 10];

  // The timeout in milliseconds for the rate limit service RPC. If not
  // set, this defaults to 20ms.
  google.protobuf.Duration timeout = 3 [(gogoproto.stdduration) = true];

  // The filter's behaviour in case the rate limiting service does
  // not respond back. When it is set to true, Envoy will not allow traffic in case of
  // communication failure between rate limiting service and the proxy.
  // Defaults to false.
  bool failure_mode_deny = 4;
}
